--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="automobil-model">A4</div>
     <div class="automobil-model">320D</div>
     <div class="automobil-model">E220</div>
+    <div class="automobil-model">Boxter</div>
 
     <p id="recenica">BMW je najbolji auto</p>
 
