--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>MIKI</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     
@@ -24,5 +25,6 @@
     <p id="recenica">BMW je najbolji auto</p>
 
     <script src='script.js'></script>
+    
 </body>
 </html>
