--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
     <p id="recenica">BMW je najbolji auto</p>
 
+	<button onclick="pokreniMe(this)">Zuto dugme</button>
+   	<button onclick="pokreniMe(this)">Plavo dugme</button>
+    	<button onclick="pokreniMe(this)">Zeleno dugme</button>
+    <p id="pisace"></p>
+
     <script src='script.js'></script>
     
 </body>
